fix responsive oscar section on small device

--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -527,3 +527,12 @@ section, article{
         align-items: center;
     }
 }
+
+@media (max-width: $breakpoint__small_phone) {
+    .oscars h3{
+        padding: 0.75em;
+        font-size: 1.25em;
+        width: 100%;
+        align-items: center;
+    }
+}
